@@ -465,8 +465,9 @@ BEGIN
   IDS_COMPAREX            "Advanced Compare Options"
   IDS_MERGEX              "Advanced Merge Options"
   IDS_SYNCHRONIZEX        "Advanced Synchronize Options"
-  IDS_EXPORT_TEXTX        "Advanced Text Export Options"
-  IDS_EXPORT_XMLX         "Advanced XML Export Options"
+  IDS_EXPORT_TEXTX        "Advanced Text%sExport Options"
+  IDS_EXPORT_XMLX         "Advanced XML%sExport Options"
+  IDS_SINGLEENTRY         " 'Single Entry' "
   IDS_FINDX               "Advanced Find Options"
   IDS_ADVANCED_TITLETEXT  "Title [Mandatory Field]"
   IDS_ADVANCED_PASSWORDTEXT "Password [Mandatory Field]"
