@@ -611,3 +611,4 @@
 #define IDS_INVALIDEXPIRYDATE           5795
 #define IDS_NOIBACKUP2                  5796
 #define IDS_SAVEAS                      5797
+#define IDS_SINGLEENTRY                 5798
